update import for prism

--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,6 +1,6 @@
 // Bootstrap 4 & Bootswatch Cosmo theme
 // Feel free to comment out anything you're not using
-
+@import "~prismjs/themes/prism-vs";
 //// bootswatch theme overrides
 // @import "bootswatch/dist/cerulean/variables";
 // @import "bootswatch/dist/cosmo/variables";
