code format changes

--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,6 +1,10 @@
+// PrismJS Code Highlighting
+@import "prism-vs";
+
+
 // Bootstrap 4 & Bootswatch Cosmo theme
 // Feel free to comment out anything you're not using
-@import "prism-vs";
+
 //// bootswatch theme overrides
 // @import "bootswatch/dist/cerulean/variables";
 // @import "bootswatch/dist/cosmo/variables";
@@ -84,6 +88,7 @@
 // @import "bootswatch/dist/superhero/bootswatch";
 // @import "bootswatch/dist/united/bootswatch";
 // @import "bootswatch/dist/yeti/bootswatch";
+
 
 
 // page-level layout
