--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -509,10 +509,23 @@ body {
   justify-content: center;
   -ms-flex-align: center;
   align-items: center;
-  min-height:300px;
+  min-height:250px;
   max-height: 450px;
   padding: 10vw 4vw;
   text-align: center;
+}
+@media (min-width: 501px) {
+.header-logo {
+  width: 45%;
+  height: auto;
+  }
+}   
+@media (max-width: 500px) {
+  .header-logo {
+    width: 60%;
+    height: auto;
+    
+  }
 }
 .site-title {
   z-index: 10;
@@ -2113,6 +2126,7 @@ img {
   justify-content: center;
   height: 40vh;
   width: 100%;
+  z-index: -1;
 }
 .date-meta {
   display: flex;
